// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiSearchBox render - custom placeholder and incremental 1`] = `
<EuiFieldSearch
  aria-label="aria-label"
  className="testClass1 testClass2"
  data-test-subj="test subject string"
  fullWidth={true}
  incremental={true}
  isLoading={false}
  onSearch={[Function]}
  placeholder="..."
  value=""
/>
`;

exports[`EuiSearchBox render - no config 1`] = `
<EuiFieldSearch
  aria-label="aria-label"
  className="testClass1 testClass2"
  data-test-subj="test subject string"
  fullWidth={true}
  incremental={false}
  isLoading={false}
  onSearch={[Function]}
  placeholder="Search..."
  value=""
/>
`;
